--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<app-weather-main></app-weather-main>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col-sm-8">
+            <app-weather-main></app-weather-main>
+        </div>
+        <div class="col-sm-4">
+            <app-weather-future></app-weather-future>
+        </div>
+
+    </div>
+</div>
 
 <router-outlet></router-outlet>
