--- a/src/app/components/weather-main/weather-main.component.html
+++ b/src/app/components/weather-main/weather-main.component.html
@@ -1,10 +1,36 @@
-<div>
-    <div class="search">
-        <h4>Search For City</h4>
-        <input type="text" placeholder="Search For City Weather" #city (keyup.enter)="getWeatherData(city.value)">
-    </div>
+<div class="search">
+    <h4>Search For City</h4>
+    <input type="text" placeholder="Search For City Weather" #city (keyup.enter)="getWeatherData(city.value)">
+</div>
     
-    <div id="divWeatherMain"> 
+<div *ngIf ="weatherNow">
+    <div class="time">{{currentTime | date:"HH:mm - EE MMM"}}</div>
+    <div class="location">{{location.name}}, {{location.country}}</div>
+    <div class="temp">
+        <span>
+            <img src="assets/images/{{weatherNow.weather[0].icon}}.png" alt="">
+        </span>
+        <h3>{{ weatherNow.main.temp | number:'1.0-0'}} °F</h3>
+    </div>
+    <div class="details">
+        <div class="main">
+            Feels like {{weatherNow.main.feels_like | number:'1.0-0'}} °F. {{weatherNow.weather[0].main}}. {{weatherNow.weather[0].description}}
+        </div>
+        <div class="sub">
+            Humidity: {{weatherNow.main.humidity}}%
+        </div>
+    </div>
+    <div class="timeline">
+        <h1>
+            3-hour Forecast
+        </h1>
+        <div *ngFor="let item of timeline">
+            <div>{{item.time | date:'HH:mm'}}</div>
+            <div>{{item.temp | number:'1.0-0'}}</div>
+        </div>
+    </div>
+</div>
+    <!-- <div id="divWeatherMain"> 
         <div *ngIf="WeatherData.isDay" class="weatherWidgetRow">
             <i class="fas fa-3x fa-sun sun"></i>  
         </div>   
@@ -19,5 +45,6 @@
         <div class="weatherWidgetRow" style="font-size: 12px;">Feels Like: {{WeatherData.temp_feels_like}}°</div>
         <div class="weatherWidgetRow" style="font-size: 25px;margin-top: 10px;">{{WeatherData.name}}</div>
         <div class="weatherWidgetRow" style="font-size: 12px;">Humidity: {{WeatherData.main.humidity}}%</div>
-    </div>
-</div>
+    </div> -->
+
+
