--- a/src/app/components/weather-main/weather-main.component.css
+++ b/src/app/components/weather-main/weather-main.component.css
@@ -11,7 +11,21 @@
     margin-top: 20px;
 }
 
-#divWeatherMain{
+.timeline{
+    display: grid;
+    grid-template-columns: repeat(8, 3rem);
+}
+
+h1{
+    grid-column: 1 / -1;
+}
+
+.temp{
+    display:flex;
+    align-items: center;
+}
+
+/* #divWeatherMain{
     display: block;
     border-radius: 10px;
     margin-top: 100px;
@@ -59,4 +73,4 @@
 @keyframes cloudMovement{
     from{margin-left: -55px;}
     to{margin-left: 65px;}
-}
+} */
